Fix more tasks FloatingView from getting cut off in current day

--- a/frontend/src/components/TaskView/FutureView/FutureViewDay.module.scss
+++ b/frontend/src/components/TaskView/FutureView/FutureViewDay.module.scss
@@ -66,8 +66,8 @@
 .FloatingView {
   position: absolute;
   z-index: 6;
+  margin-left: 50px;
   top: 0;
-  left: 0;
   right: 0;
   max-height: 80vh;
   overflow-x: hidden;
